update table css for wrapping and known issues

--- a/docs/css/tables.css
+++ b/docs/css/tables.css
@@ -1,4 +1,3 @@
-
 /* Table styling */
 table {
     border-collapse: collapse;
@@ -8,10 +7,9 @@ table {
 th, td {
     border: 1px solid #ddd;
     padding: 8px;
-    word-wrap: break-word;
-    white-space: normal;
+    word-wrap: break-word !important;
+    white-space: normal !important;
 }
-
 .compact-table th,
 .compact-table td {
   text-align: left;
